--- a/index.html
+++ b/index.html
@@ -7,28 +7,30 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | News homepage</title>
+  <link rel ="stylesheet" href ="styles.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  
 </head>
 <body>
+  <div class="first-body">
+  <div class="header"><img src = "assets\images\logo.svg" alt ="home logo"/>
+  <div class ="header-elements">
+  <p class ="header-item">Home</p>
+  <p class ="header-item">New</p>
+  <p class="header-item">Popular</p>
+  <p class="header-item">Trending</p>
+  <p class ="header-item">Categories</p></div></div>
+  <div class="first-body-content">
+    <div class="first-body-content-one">
+      <div class="pic1"></div>
+  <div class="first-body-content-one-one"><h1>The Bright Future of Web 3.0?</h1>
 
-  Home
-  New
-  Popular
-  Trending
-  Categories
+  <div class="first-body-content-one-one-one"><p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+  But is it really fulfilling its promise?</p>
 
-  The Bright Future of Web 3.0?
-
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
-
-  Read more
-
+  Read more</div></div></div>
+  <div class="first-body-content-two">
   New 
 
   Hydrogen VS Electric Cars
@@ -38,8 +40,9 @@
   What are the possible adverse effects of on-demand AI image generation?
 
   Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
+  Private funding by VC firms is down 50% YOY. We take a look at what that means.</div></div>
+  </div>
+<div class ="second-body">
   01
   Reviving Retro PCs
   What happens when old PCs are given modern upgrades?
@@ -51,10 +54,6 @@
   03
   The Growth of Gaming
   How the pandemic has sparked fresh opportunities.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+</div>
 </body>
 </html>
