--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
       <div class="pic1"></div>
   <div class="first-body-content-one-one"><h1>The Bright Future of Web 3.0?</h1>
 
-  <div class="first-body-content-one-one-one"><p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+  <div class="first-body-content-one-one-one"><p class ="readmore-up">We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
   But is it really fulfilling its promise?</p>
 
-  Read more</div></div></div>
-  <div class="first-body-content-two">
-  New 
+  <p class="readmore">READ MORE</p></div></div></div>
+  <div class="side-body">
+  <div class="side-body-header">New</div> 
+  <div class="side-body-content">
+  <h2>Hydrogen VS Electric Cars</h2>
+  <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
 
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
+  <h2>The Downsides of AI Artistry</h2>
+  <p>What are the possible adverse effects of on-demand AI image generation?</p>
 
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.</div></div>
+  <h2>Is VC Funding Drying Up?</h2>
+  <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p></div></div></div>
   </div>
 <div class ="second-body">
   01
