--- a/index.html
+++ b/index.html
@@ -1,59 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | News homepage</title>
-  <link rel ="stylesheet" href ="styles.css">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  
-</head>
-<body>
-  <div class="first-body">
-  <div class="header"><img src = "assets\images\logo.svg" alt ="home logo"/>
-  <div class ="header-elements">
-  <p class ="header-item">Home</p>
-  <p class ="header-item">New</p>
-  <p class="header-item">Popular</p>
-  <p class="header-item">Trending</p>
-  <p class ="header-item">Categories</p></div></div>
-  <div class="first-body-content">
-    <div class="first-body-content-one">
-      <div class="pic1"></div>
-  <div class="first-body-content-one-one"><h1>The Bright Future of Web 3.0?</h1>
+    <title>Frontend Mentor | News homepage</title>
+    <link rel="stylesheet" href="styles.css" />
 
-  <div class="first-body-content-one-one-one"><p class ="readmore-up">We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?</p>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  </head>
+  <body>
+    <div class="first-body">
+      <div class="header">
+        <img src="assets\images\logo.svg" alt="home logo" />
+        <div class="header-elements">
+          <p class="header-item">Home</p>
+          <p class="header-item">New</p>
+          <p class="header-item">Popular</p>
+          <p class="header-item">Trending</p>
+          <p class="header-item">Categories</p>
+        </div>
+      </div>
+      <div class="first-body-content">
+        <div class="first-body-content-one">
+          <div class="pic1"></div>
+          <div class="first-body-content-one-one">
+            <h1>The Bright Future of Web 3.0?</h1>
 
-  <p class="readmore">READ MORE</p></div></div></div>
-  <div class="side-body">
-  <div class="side-body-header">New</div> 
-  <div class="side-body-content">
-  <h2>Hydrogen VS Electric Cars</h2>
-  <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+            <div class="first-body-content-one-one-one">
+              <p class="readmore-up">
+                We dive into the next evolution of the web that claims to put
+                the power of the platforms back into the hands of the people.
+                But is it really fulfilling its promise?
+              </p>
 
-  <h2>The Downsides of AI Artistry</h2>
-  <p>What are the possible adverse effects of on-demand AI image generation?</p>
+              <p class="readmore">READ MORE</p>
+            </div>
+          </div>
+        </div>
+        <div class="side-body">
+          <div class="side-body-header">New</div>
+          <div class="side-body-content">
+            <h2>Hydrogen VS Electric Cars</h2>
+            <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
 
-  <h2>Is VC Funding Drying Up?</h2>
-  <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p></div></div></div>
-  </div>
-<div class ="second-body">
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
+            <h2>The Downsides of AI Artistry</h2>
+            <p>
+              What are the possible adverse effects of on-demand AI image
+              generation?
+            </p>
 
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
+            <h2>Is VC Funding Drying Up?</h2>
+            <p>
+              Private funding by VC firms is down 50% YOY. We take a look at
+              what that means.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
 
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-</div>
-</body>
+    <div class="second-body">
+      <div class="first-one">
+        <img src="assets\images\image-retro-pcs.jpg" alt="retro pcs" />
+        <div>01 Reviving Retro PCs What happens when old PCs are given modern
+        upgrades?</div>
+      </div>
+      <div class="second-one">
+        <img src="assets\images\image-top-laptops.jpg" alt="laptops" />
+        <div>02 Top 10 Laptops of 2022 Our best picks for various needs and budgets.</div>
+      </div>
+      <div class="third-one">
+        <img src="assets\images\image-gaming-growth.jpg" alt="gaming" />
+        <div>03 The Growth of Gaming How the pandemic has sparked fresh
+        opportunities.</div>
+      </div>
+    </div>
+  </body>
 </html>
