--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
@@ -14,8 +12,6 @@
 
     <title>Frontend Mentor | News homepage</title>
     <link rel="stylesheet" href="styles.css" />
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
     <div class="first-body">
@@ -71,17 +67,27 @@
     <div class="second-body">
       <div class="first-one">
         <img src="assets\images\image-retro-pcs.jpg" alt="retro pcs" />
-        <div>01 Reviving Retro PCs What happens when old PCs are given modern
-        upgrades?</div>
+        <div class="last">
+          <h1>01</h1>
+          <h2>Reviving Retro PCs</h2>
+          <p>What happens when old PCs are given modern upgrades?</p>
+        </div>
       </div>
       <div class="second-one">
         <img src="assets\images\image-top-laptops.jpg" alt="laptops" />
-        <div>02 Top 10 Laptops of 2022 Our best picks for various needs and budgets.</div>
+        <div class="last">
+          <h1>02</h1>
+          <h2>Top 10 Laptops of 2022</h2>
+          <p>Our best picks for various needs and budgets.</p>
+        </div>
       </div>
       <div class="third-one">
         <img src="assets\images\image-gaming-growth.jpg" alt="gaming" />
-        <div>03 The Growth of Gaming How the pandemic has sparked fresh
-        opportunities.</div>
+        <div class="last">
+          <h1>03</h1>
+          <h2>The Growth of Gaming</h2>
+          <p>How the pandemic has sparked fresh opportunities.</p>
+        </div>
       </div>
     </div>
   </body>
